<resources>
    <string name="app_name">Time Scheduler</string>
    <string name="settings_name">Settings</string>
    <string name="about_name">About</string>
    <string name="help_name">Help</string>

    <string name="fragment_home_temporary">Fragment Home to be implemented</string>
    <string name="fragment_stats_temporary">Fragment Stats to be implemented</string>
    <string name="fragment_categories_temporary">Fragment Categories to be implemented</string>

    <string name="tab1">TAB 1</string>
    <string name="tab2">TAB 2</string>
    <string name="tab3">TAB 3</string>
    <string name="date_selected"></string>
    <string name="today_button">Today</string>
    <string name="add_name">Add new activity</string>
    <string name="category_name">Categories</string>
    <string name="stats_name">Stats</string>
    <string name="add_startTime">Start time</string>
    <string name="add_hour"></string>
    <string name="add_nowButton">NOW</string>
    <string name="add_category">Category</string>
    <string name="add_description">Description</string>
    <string name="add_Button">Add</string>
    <string name="add_prompt_CategoryName">Choose category</string>
    <string name="add_prompt_TypeDescription">Type description</string>
    <string name="action_mark_all_read">Mark All as Read</string>
    <string name="action_clear_all">Clear All</string>

    <string-array name="Nav_Drawer">
        <item>Home</item>
        <item>Categories</item>
        <item>History</item>
        <item>Stats</item>
        <item>Settings</item>
    </string-array>
    <string name="nav_home">Home</string>
    <string name="nav_categories">Categories</string>
    <string name="nav_history">History</string>
    <string name="nav_stats">Stats</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_export_import">Export / Import</string>
    <string name="nav_markUs">Mark us</string>
    <string name="nav_help">Help</string>
    <string name="nav_about">About</string>
    <string name="nav_trash">Erase activities</string>

    <string-array name="categories">
        <item>Meal</item>
        <item>Leisure</item>
        <item>Sleep</item>
        <item>Work</item>
        <item>Learn</item>
        <item>Sport</item>
        <item>Social</item>
        <item>Duty</item>
    </string-array>
    <string-array name="Meal">
        <item>Breakfast</item>
        <item>Lunch</item>
        <item>Dinner</item>
        <item>Supper</item>
        <item>Snack</item>
        <item>Other</item>
    </string-array>

    <string-array name="Leisure">
        <item>TV</item>
        <item>Computer game</item>
        <item>Mobile phone</item>
        <item>Internet</item>
        <item>Social network</item>
        <item>Reading</item>
        <item>Rest</item>
        <item>Leisure</item>
        <item>Other</item>
    </string-array>
    <string-array name="Sleep">
        <item>Sleep</item>
        <item>Nap</item>
        <item>Other</item>
    </string-array>
    <string-array name="Work">
        <item>Work</item>
        <item>Meeting</item>
        <item>E-mail</item>
        <item>Break</item>
        <item>Document</item>
        <item>Business trip</item>
        <item>Report</item>
        <item>Other</item>
    </string-array>
    <string-array name="Learn">
        <item>Classes</item>
        <item>Test</item>
        <item>Project</item>
        <item>Homework</item>
        <item>Report</item>
        <item>Other</item>
    </string-array>
    <string-array name="Sport">
        <item>Walk</item>
        <item>Run</item>
        <item>Ride a bike</item>
        <item>Swim</item>
        <item>Gym</item>
        <item>Tennis</item>
        <item>Football</item>
        <item>Volleyball</item>
        <item>Basketball</item>
        <item>Squash</item>
        <item>Other</item>
    </string-array>
    <string-array name="Social">
        <item>Meet friends</item>
        <item>Meet family</item>
        <item>Go to a party</item>
        <item>Birthday celebration</item>
        <item>Other</item>
    </string-array>
    <string-array name="Duty">
        <item>Clean</item>
        <item>Wash</item>
        <item>Take garbage out</item>
        <item>Other</item>
    </string-array>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cat_prompt_Category">Add new category</string>
    <string name="cat_prompt_SubCategory">Add new subcategory</string>
    <string name="set_notification">Enable notification bar</string>
    <string name="set_firstNotiButton">Set first button</string>
    <string name="set_secondNotiButton">Set second button</string>
    <string name="set_button_button">Set</string>
</resources>
