<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/navDrawer_home"
            android:title="@string/nav_home"
            android:icon="@drawable/home"/>
        <item
            android:id="@+id/navDrawer_categories"
            android:title="@string/nav_categories"
            android:icon="@drawable/category"/>
        <item
            android:id="@+id/navDrawer_history"
            android:title="@string/nav_history"
            android:icon="@drawable/history"/>
        <item
            android:id="@+id/navDrawer_stats"
            android:title="@string/nav_stats"
            android:icon="@drawable/stats"/>
        <item
            android:id="@+id/navDrawer_settings"
            android:title="@string/nav_settings"
            android:icon="@drawable/settings"/>
    </group>

    <item android:title="Other">
        <menu>
            <group>
                <item
                    android:id="@+id/navDrawer_export_import"
                    android:title="@string/nav_export_import"
                    android:icon="@drawable/export"/>
                <item
                    android:id="@+id/navDrawer_markUs"
                    android:title="@string/nav_markUs"
                    android:icon="@drawable/rate"/>
                <item
                    android:id="@+id/navDrawer_help"
                    android:title="@string/nav_help"
                    android:icon="@drawable/help"/>
                <item
                    android:id="@+id/navDrawer_about"
                    android:title="@string/nav_about"
                    android:icon="@drawable/about"/>
                <item
                    android:id="@+id/navDrawer_trash"
                    android:title="@string/nav_trash"
                    android:icon="@drawable/trash"/>
            </group>
        </menu>
    </item>
</menu>